Updated site content with new resume, projects, and skills

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
   <!-- Landing Page / Intro -->
   <section id="intro">
-    <img src="BF72973A-6797-4A34-AA3D-4C766A066B06.jpeg" alt="Professional Headshot" class="headshot">
+    <img src="headshot.jpg" alt="Professional Headshot" class="headshot">
     <h1>Sonika Nallapu</h1>
     <p class="tagline">Bridging biology and engineering to shape the future of healthcare</p>
-    <p class="summary">Aspiring biomedical engineer passionate about innovative healthcare solutions. Seeking opportunities to apply hands-on research and engineering experience in solving clinical challenges.</p>
+    <p class="summary">Biomedical engineer with a passion for translating scientific discovery into medical innovation. Actively seeking opportunities to contribute to impactful research, design, and product development in the healthcare space.</p>
   </section>
 
   <!-- About Me -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m a biomedical engineer passionate about developing tools and technologies that enhance patient care and improve clinical outcomes. My interests lie at the intersection of biology, engineering, and medical innovation.</p>
+    <p>I am a biomedical engineer passionate about developing medical technologies that improve surgical outcomes and patient care. My academic and professional journey has focused on bridging research with real-world applications in diagnostics and personalized medicine.</p>
     <a href="resume.pdf" download class="resume-button">Download Resume</a>
   </section>
 
@@ -27,36 +27,36 @@
     <h2>Projects</h2>
 
     <div class="project">
-      <h3>Adjustable Flow Probe (2024)</h3>
+      <h3>AdjustiFlow (2024)</h3>
       <p><strong>Context:</strong> Senior Capstone Project</p>
-      <p><strong>Problem:</strong> Needed a reusable, precise device for monitoring blood flow in small vessels.</p>
-      <p><strong>Role:</strong> Led CAD modeling and prototyping process.</p>
-      <p><strong>Skills:</strong> SolidWorks, 3D printing, mechanical testing</p>
-      <img src="A3E02A3D-A9D5-4F53-BA4B-19B22DE8809B.jpeg" alt="Adjustable Flow Probe Poster">
+      <p><strong>Problem:</strong> Needed a reusable, precise device to measure blood flow in small vessels.</p>
+      <p><strong>Role:</strong> Led CAD design, created functional prototypes using 3D printing, and contributed to mechanical testing protocols.</p>
+      <p><strong>Tools/Skills:</strong> SolidWorks, 3D Printing, Mechanical Testing</p>
+      <img src="flow_probe_poster.jpg" alt="AdjustiFlow Poster">
     </div>
 
     <div class="project">
       <h3>Tissue Engineering Presentation (2024)</h3>
-      <p><strong>Context:</strong> Final Presentation for Tissue Engineering Course</p>
-      <p><strong>Problem:</strong> Studied scaffold materials that optimize cell attachment and growth.</p>
-      <p><strong>Role:</strong> Conducted background research, visualized experimental setups.</p>
-      <p><strong>Skills:</strong> Literature review, presentation design</p>
+      <p><strong>Context:</strong> Tissue Engineering Final Presentation</p>
+      <p><strong>Problem:</strong> Analyzed scaffold materials for cell viability and tissue growth.</p>
+      <p><strong>Role:</strong> Conducted research, created visuals, and delivered technical presentation.</p>
+      <p><strong>Tools/Skills:</strong> Hydrogel Generation, Scientific Communication, Microsoft PowerPoint</p>
     </div>
 
     <div class="project">
       <h3>Biomaterials Presentation (2023)</h3>
       <p><strong>Context:</strong> Biomaterials Final Presentation</p>
-      <p><strong>Problem:</strong> Evaluated biocompatibility and degradation rates of materials for implants.</p>
-      <p><strong>Role:</strong> Created detailed visual aids and analyzed comparative data.</p>
-      <p><strong>Skills:</strong> Data analysis, CAD rendering</p>
+      <p><strong>Problem:</strong> Evaluated material properties for biocompatibility and degradability in medical devices.</p>
+      <p><strong>Role:</strong> Presented findings comparing different polymers and metals.</p>
+      <p><strong>Tools/Skills:</strong> CAD, Materials Analysis, Presentation Design</p>
     </div>
 
     <div class="project">
-      <h3>Living Systems Final Paper (2023)</h3>
-      <p><strong>Context:</strong> Final Project for Living Systems Course</p>
-      <p><strong>Problem:</strong> Investigated synthetic approaches to mimic biological regulation systems.</p>
-      <p><strong>Role:</strong> Wrote and edited final report, included systems diagramming.</p>
-      <p><strong>Skills:</strong> Research synthesis, diagramming</p>
+      <h3>Living Systems Presentation (2023)</h3>
+      <p><strong>Context:</strong> Living Systems Final Paper</p>
+      <p><strong>Problem:</strong> Modeled biological regulation systems using engineering frameworks.</p>
+      <p><strong>Role:</strong> Synthesized research and developed a comprehensive final report.</p>
+      <p><strong>Tools/Skills:</strong> MATLAB, Systems Biology, Technical Writing</p>
     </div>
   </section>
 
@@ -66,18 +66,18 @@
 
     <div class="job">
       <h3>Scientist I, CerFlux (June 2024 – Present)</h3>
-      <p><strong>Company:</strong> CerFlux is a biotech firm advancing personalized cancer treatment through its POET® platform.</p>
-      <p><strong>Role:</strong> Support tumor profiling using POET® assay workflows, optimize in vitro environments for tumor testing.</p>
-      <p><strong>Key Contributions:</strong> Standardized sample preparation protocol, improved assay reproducibility by 20%.</p>
-      <p><strong>Skills:</strong> Cell culture, assay development, precision pipetting, data analysis</p>
+      <p><strong>Company:</strong> CerFlux is a biotechnology company focused on personalized cancer treatment through its patented POET® platform. It tests patient tumors against multiple therapies to optimize treatment effectiveness while minimizing unnecessary side effects and costs. It also supports pharmaceutical R&D with tools like PEER® and ChipMux™.</p>
+      <p><strong>Role:</strong> Support R&D efforts optimizing tumor microenvironment simulations for POET® assay effectiveness.</p>
+      <p><strong>Key Contributions:</strong> Streamlined tissue handling protocols, improved sample consistency across platforms.</p>
+      <p><strong>Skills:</strong> Cell Culture, Tumor Modeling, Assay Development, Experimental Optimization</p>
     </div>
 
     <div class="job">
       <h3>Template Production Associate, BioGX (July 2023 – June 2024)</h3>
-      <p><strong>Company:</strong> BioGX develops simplified, ready-to-use real-time PCR diagnostics.</p>
-      <p><strong>Role:</strong> Prepared and quality-controlled Sample-Ready™ PCR mixes for global diagnostic partners.</p>
-      <p><strong>Key Contributions:</strong> Maintained 100% batch pass rate across three production cycles.</p>
-      <p><strong>Skills:</strong> qPCR, lyophilization, documentation, ISO compliance</p>
+      <p><strong>Company:</strong> BioGX is a molecular diagnostics company creating ready-to-use PCR reagents for clinical, food safety, and pharma testing. Their Xfree™ and Sample-Ready™ formats eliminate cold storage and simplify testing.</p>
+      <p><strong>Role:</strong> Created, tested, packaged, and shipped PCR-positive control mixes to ensure customer reliability and consistent product quality.</p>
+      <p><strong>Key Contributions:</strong> Designed and implemented a record-keeping system to improve tracking and accuracy of production batches.</p>
+      <p><strong>Skills:</strong> qPCR, Lyophilization, ISO Documentation, Logistics, Quality Control</p>
     </div>
   </section>
 
@@ -85,14 +85,19 @@
   <section id="skills">
     <h2>Skills</h2>
     <ul class="skills-list">
-      <li>SolidWorks</li>
-      <li>MATLAB</li>
-      <li>qPCR</li>
-      <li>3D Printing</li>
+      <li>Hydrogel Generation</li>
+      <li>3D Tissue Engineering</li>
       <li>Cell Culture</li>
-      <li>Assay Development</li>
-      <li>Research Communication</li>
-      <li>Team Collaboration</li>
+      <li>qPCR / PCR</li>
+      <li>MATLAB</li>
+      <li>SolidWorks / Onshape</li>
+      <li>AutoCAD / Inventor</li>
+      <li>JMP</li>
+      <li>Microsoft Office</li>
+      <li>Scientific Writing</li>
+      <li>Team Leadership</li>
+      <li>Root-Cause Analysis</li>
+      <li>Rapid Learning</li>
     </ul>
   </section>
 
